--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ accessToken: pk.eyJ1IjoiaGZ1IiwiYSI6ImlRSGJVUTAifQ.rTx380smyvPc1gUfZv1cmw
 style: https://optgeo.github.io/b3p/style.json
 chapters:
   -
+    title: 会津盆地
     hash: 11.3/37.5259/139.8763/-36.8/66
 </script>
 </body>
